package dev.kaldiroglu.dp.structural.adapter.electricity.pluggable.electricity.parameterized;

/**
 * <b>Adaptee</b> #1: an American source with its own, incompatible interface ({@code pushSwitch}).
 */
public final class KenyaPowerSource {

    public void hakunaMatata() {
        System.out.println("Kenya source: switch pushed (110V / 60Hz)");
    }
}
